Ported Sec Tickets From Impstation (#2449)
<!-- Guidelines:
https://docs.spacestation14.io/en/getting-started/pr-guideline -->
<!-- NOTE: All code submitted to this repository is ALWAYS licensed
under the AGPL-3.0-or-later license.
The REUSE Specification headers or separate .license files indicate a
secondary license (e.g., MPL or MIT) solely to facilitate
integration for projects that do not use the AGPL license. This
secondary license does not replace the fact that AGPL-3.0-or-later
remains the primary and binding license.
Uncomment and modify the following line if you wish to change the
license from the default of AGPL.-->
<!--- LICENSE: AGPL -->
## About the PR
<!-- What did you change? -->
Ported the sec tickets from Impstation from PRs
[609](https://github.com/impstation/imp-station-14/pull/609),
[618](https://github.com/impstation/imp-station-14/pull/618),
[680](https://github.com/impstation/imp-station-14/pull/680) and
[718](https://github.com/impstation/imp-station-14/pull/718).

## Why / Balance
<!-- Discuss how this would affect game balance or explain why it was
changed. Link any relevant discussions or issues. -->
It basically adds a new paperwork item into sec lockers which allow them
to write up tickets and harmlessly embed them into people. Another way
to inform people of infractions or perform funny bits.

## Technical details
<!-- Summary of code changes for easier review. -->
Most changed under _Impstation namespaces.
Edited HoS, SecOff, Warden and Corpsman lockers to include ticket pads.
Added ticket pad whitelist to sec belt.

## Media
<!-- Attach media if the PR makes ingame changes (clothing, items,
features, etc).
Small fixes/refactors are exempt. Media may be used in SS14 progress
reports with credit. -->


https://github.com/user-attachments/assets/0bb3715c-729c-401b-b340-32274d1f33dc

## Requirements
<!-- Confirm the following by placing an X in the brackets [X]: -->
- [X] I have read and am following the [Pull Request and Changelog
Guide

--- a/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
@@ -470,6 +470,7 @@
       - id: Multitool # DEN
       - id: ClothingNeckSecuritymedal # DEN
       - id: ClothingNeckBronzeheart # DEN
+      - id: TicketPad #imp special
 
 - type: entity
   id: LockerHeadOfSecurityFilled
@@ -502,6 +503,7 @@
       - id: Multitool # DEN
       - id: ClothingNeckSecuritymedal # DEN
       - id: ClothingNeckBronzeheart # DEN
+      - id: TicketPad #imp special
 
 - type: entity
   id: LockerFreezerVaultFilled
