--- a/Resources/Prototypes/Entities/Clothing/Belt/belts.yml
+++ b/Resources/Prototypes/Entities/Clothing/Belt/belts.yml
@@ -626,6 +626,7 @@
         - Truncheon
         - HolofanProjector
         - SimpleMeleeWeapon
+        - SecTicket
       components:
         - Stunbaton
         - FlashOnTrigger
