--- a/Resources/Prototypes/_Impstation/Flavors/flavors.yml
+++ b/Resources/Prototypes/_Impstation/Flavors/flavors.yml
@@ -169,3 +169,8 @@
   id: gooey
   flavorType: Base
   description: flavor-base-gooey
+
+- type: flavor
+  id: secticket
+  flavorType: Complex
+  description: flavor-complex-secticket
