--- a/Resources/Prototypes/Catalog/Fills/Lockers/security.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/security.yml
@@ -141,6 +141,7 @@
       - id: LunchboxSecurityFilledRandom # Delta-v Lunchboxes!
         prob: 0.3
       - id: AccessConfigurator # DEN
+      - id: TicketPad #imp special
 
 - type: entity
   id: LockerSecurityFilled
@@ -187,6 +188,7 @@
         prob: 0.6
       - id: LunchboxSecurityFilledRandom # Delta-v Lunchboxes!
         prob: 0.3
+      - id: TicketPad #imp special
 
 - type: entity
   id: LockerBrigmedicFilled
@@ -213,6 +215,7 @@
       - id: MedkitCombatFilled #for when maps don't map in combat kits :<
         # corpsman gets WAY too much medicine, especially when there's medkits mapped into the office. removed all the other random medkits
       - id: LunchboxSecurityFilledRandom # Delta-v Lunchboxes!
+      - id: TicketPad #imp special
 
 # DeltaV - adding corpsman locker w/ hardsuit
 
@@ -244,6 +247,7 @@
       - id: ClothingOuterHardsuitCombatCorpsman
       - id: OxygenTankFilled #Den
       - id: NitrogenTankFilled #Den
+      - id: TicketPad #imp special
 
 # DeltaV - end addition
 
