spiked collar, colorable spiked cuffs

--- a/Resources/Prototypes/CharacterItemGroups/Generic/neckGroup.yml
+++ b/Resources/Prototypes/CharacterItemGroups/Generic/neckGroup.yml
@@ -255,6 +255,8 @@
     - type: loadout
       id: LoadoutClothingNeckColorableCollar
     - type: loadout
+      id: LoadoutClothingNeckSpikedCollar
+    - type: loadout
       id: LoadoutClothingNeckLoopScarf
     - type: loadout
       id: LoadoutClothingNeckDrapedMantle
