--- a/Resources/Prototypes/_DEN/Loadouts/Generic/hands.yml
+++ b/Resources/Prototypes/_DEN/Loadouts/Generic/hands.yml
@@ -119,6 +119,7 @@
   category: Hands
   cost: 0
   exclusive: true
+  customColorTint: true
   requirements:
   - !type:CharacterItemGroupRequirement
     group: LoadoutGloves
