New Map: Port Acrux (#2435)
<!-- Guidelines:
https://docs.spacestation14.io/en/getting-started/pr-guideline -->
<!-- NOTE: All code submitted to this repository is ALWAYS licensed
under the AGPL-3.0-or-later license.
The REUSE Specification headers or separate .license files indicate a
secondary license (e.g., MPL or MIT) solely to facilitate
integration for projects that do not use the AGPL license. This
secondary license does not replace the fact that AGPL-3.0-or-later
remains the primary and binding license.
Uncomment and modify the following line if you wish to change the
license from the default of AGPL.-->
<!--- LICENSE: AGPL -->
## About the PR
Port Acrux is an all new all fancy low/midpop map that, unlike Dingo,
was entirely vibe-mapped. Planning? Who's she?
Key features include:
- 3 extra docking areas for ships, besides just evac and arrivals
- A pool!
- A main loop corridor with 4 of the departments on it
- A little teeny observation deck, in memory of my long departed friend
who ill refer to as M
- FOUR FUCKING BARS FUCK YOU!
- Funny maints secrets, including the Fox Shrine, and Clown Nest
- Genpop!
- Nice little places to sit around the place
- A TEG, again
- Twin artifact chambers for double-barreled depth 5 environmental
disruption artifact goodness
- At least 3 meat clowns

## Why / Balance
New Map WIP

## Current Checklist
[X] Frame
[X] Room placement
[X] Basic furinishing
[X] Decal Work
[X] Atmospherics
[X] Power
[X] Lighting
[X] Spawns
[X] Detailing
[X] Disposals
[ ] Testing
[X] Removing Herobrine

## Requirements
<!-- Confirm the following by placing an X in the brackets [X]: -->
- [X] I have read and am following the [Pull Request and Changelog
Guidelines](https://docs.spacestation14.com/en/general-development/codebase-info/pull-request-guidelines.html).
- [X] I have added media to this PR or it does not require an ingame
showcase.
- [X] I have tested any changes or additions.
- [X] I can confirm this PR contains no AI-generated content, and did

--- a/Resources/Prototypes/Maps/Pools/default.yml
+++ b/Resources/Prototypes/Maps/Pools/default.yml
@@ -54,6 +54,7 @@
 #  - Barrier - October 21st - pending rework
   - Gravel
   - Dingo
+  - Acrux
 #  - Gax - im so sorry this wasn't commented out
 #  - Rad - im so sorry this wasn't commented out
 #  - Meta
